--- a/static/index.html
+++ b/static/index.html
@@ -30,7 +30,7 @@ function count2image(count) {
 
 var state = {opened: "closed", count: 0};
 
-ws = new WebSocket("ws://localhost:8080/socket");
+ws = new WebSocket("ws://" + location.host + "/socket");
 ws.onopen = console.log;
 ws.onclose = console.error;
 ws.onerror = console.error;
